--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -410,6 +410,9 @@
             <br>
             <div class="row">
                 <div class="ml-md-auto">
+                    <button type="button" class="btn btn-info btn-round" (click)="generateInvoicePDF(selServiceData)"><i
+                            class="fa fa-file-pdf-o"></i>
+                        Invoice(PDF)</button>
                     <button type="submit" class="btn btn-info btn-round" (click)="saveAppointmentDetails()">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
