--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
       <div class="card card-stats">
         <div class="card-body ">
           <div class="row">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
       <div class="card card-stats">
         <div class="card-body ">
           <div class="row">
@@ -105,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
       <div class="card card-stats">
         <div class="card-body ">
           <div class="row">
@@ -200,7 +200,7 @@
                     <button class="btn btn-success" *ngIf="item.isactive==true" (click)="paymentCompleted(item.id)">
                       <i class="fa fa-inr" aria-hidden="true"></i> Accept
                     </button>
-                    <button class="btn btn-danger" *ngIf="item.isactive==false" disabled>
+                    <button class="btn btn-info" *ngIf="item.isactive==false" disabled>
                       Completed !
                     </button>
                   </td>
