--- a/src/app/enquiry/enquiry.component.html
+++ b/src/app/enquiry/enquiry.component.html
@@ -41,13 +41,16 @@
                                     <td class="text-center">{{ item.Createddate }}</td>
 
                                     <td class="text-right">
-                                        <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm">
-                                            <i class="fa fa-edit" data-toggle="modal" data-target="#VisitorModal"
-                                                (click)="viewEmpDetails(item)"></i>
+                                        <button type="button" rel="tooltip" class="btn btn-success btn-icon btn-sm"
+                                            *ngIf="item.isactive==true">
+                                            <i class="fa fa-check" (click)="updateEnquiryStatus(item.id)"></i>
+                                        </button>
+                                        <button class="btn btn-success" *ngIf="item.isactive==false">
+                                            Confirmed !
                                         </button>
                                         &nbsp;
                                         <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-sm"
-                                            (click)="removeEmployee(item.id)">
+                                            (click)="removeEmployee(item.id)" *ngIf="item.isactive==true">
                                             <i class="fa fa-times"></i>
                                         </button>
                                     </td>
