--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-6">
-      <div class="card card-stats">
+      <div class="card card-stats" (click)="openCustomer()">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
@@ -18,7 +18,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openCustomer()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
-      <div class="card card-stats">
+      <div class="card card-stats" (click)="openServices()">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openServices()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6" *ngIf="adminRole == 'Admin'">
-      <div class="card card-stats">
+      <div class="card card-stats" (click)="openEmployee()">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
@@ -71,7 +71,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openEmployee()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
@@ -100,7 +100,7 @@
         <div class="card-footer">
           <hr>
           <div class="stats">
-            <i class="fa fa-arrow-right"></i> View
+            <i class="fa fa-arrow-right"></i>
           </div>
         </div>
       </div>
@@ -126,13 +126,13 @@
         <div class="card-footer">
           <hr>
           <div class="stats">
-            <i class="fa fa-arrow-right"></i> View
+            <i class="fa fa-arrow-right"></i>
           </div>
         </div>
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-sm-6">
-      <div class="card card-stats">
+      <div class="card card-stats" (click)="openEniquiry()">
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="card-footer" (click)="openEniquiry()">
+        <div class="card-footer">
           <hr>
           <div class="stats">
             <i class="fa fa-arrow-right"></i> View
